update notebook with output after good run on gizo

--- a/PBP_NRS11_batch.ipynb
+++ b/PBP_NRS11_batch.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "c1afecf4-488f-4d0d-853e-6f59214ebe2f",
    "metadata": {
     "id": "c1afecf4-488f-4d0d-853e-6f59214ebe2f"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "27c1c775-5d74-45f7-be76-e82c1d35286e",
    "metadata": {
     "colab": {
@@ -74,7 +74,16 @@
     "id": "27c1c775-5d74-45f7-be76-e82c1d35286e",
     "outputId": "d118c888-e562-4197-bd24-165399dabc36"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from pbp.process_helper import ProcessHelper\n",
     "from pbp.file_helper import FileHelper\n",
@@ -112,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "e9whAGckWQYX",
    "metadata": {
     "id": "e9whAGckWQYX"
@@ -142,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "d9f38450-5afd-44e8-a55e-9a3861c61fce",
    "metadata": {
     "id": "d9f38450-5afd-44e8-a55e-9a3861c61fce"
@@ -191,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "9d440360",
    "metadata": {
     "id": "9d440360"
@@ -274,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "9f820f99-e302-475d-b858-bb5dc806c8c1",
    "metadata": {
     "id": "9f820f99-e302-475d-b858-bb5dc806c8c1"
@@ -340,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "99d7252d-45e2-46e8-9379-f072d5d674c5",
    "metadata": {
     "id": "99d7252d-45e2-46e8-9379-f072d5d674c5"
@@ -369,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "cd9d6c50-687d-4b5f-9987-7abb0dd8c848",
    "metadata": {
     "colab": {
@@ -394,7 +403,7 @@
        " '20200110']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "c85cf420",
    "metadata": {
     "colab": {
@@ -424,45 +433,40 @@
      "output_type": "stream",
      "text": [
       "Launching HMB generation for 10 dates=['20200101', '20200102', '20200103', '20200104', '20200105', '20200106', '20200107', '20200108', '20200109', '20200110']\n",
+      "::: Started processing date='20200101'\n",
       "::: Started processing date='20200104'\n",
-      "::: Started processing date='20200107'\n",
-      "::: Started processing date='20200103'\n",
-      "::: Started processing date='20200108'\n",
-      "::: Started processing date='20200106'\n",
-      "::: Started processing date='20200110'\n",
       "::: Started processing date='20200109'\n",
-      ":::   Ended processing date='20200109' => (dataset generated in memory)\n",
+      "::: Started processing date='20200105'\n",
+      "::: Started processing date='20200102'\n",
+      "::: Started processing date='20200107'\n",
+      "::: Started processing date='20200110'\n",
+      "::: Started processing date='20200108'\n",
+      "::: Started processing date='20200103'\n",
+      "::: Started processing date='20200106'\n",
       ":::   Ended processing date='20200104' => (dataset generated in memory)\n",
+      ":::   Ended processing date='20200109' => (dataset generated in memory)\n",
+      ":::   Ended processing date='20200105' => (dataset generated in memory)\n",
+      ":::   Ended processing date='20200110' => (dataset generated in memory)\n",
       ":::   Ended processing date='20200108' => (dataset generated in memory)\n",
       ":::   Ended processing date='20200103' => (dataset generated in memory)\n",
-      ":::   Ended processing date='20200106' => (dataset generated in memory)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'SoundStatus' object has no attribute 'sound_file'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[20], line 11\u001B[0m\n\u001B[1;32m      7\u001B[0m gen_netcdf \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mFalse\u001B[39;00m   \u001B[38;5;66;03m# True for each process to save its generated file.\u001B[39;00m\n\u001B[1;32m      8\u001B[0m \u001B[38;5;66;03m## NOTE: set to True in new binder environment to see whether the issues persist.\u001B[39;00m\n\u001B[1;32m      9\u001B[0m \n\u001B[1;32m     10\u001B[0m \u001B[38;5;66;03m## Get all HMB datasets:\u001B[39;00m\n\u001B[0;32m---> 11\u001B[0m generated_datasets \u001B[38;5;241m=\u001B[39m \u001B[43mprocess_multiple_dates\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdates\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgen_netcdf\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mgen_netcdf\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     13\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mGenerated datasets: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mlen\u001B[39m(generated_datasets)\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m     15\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m gen_netcdf:\n",
-      "Cell \u001B[0;32mIn[17], line 33\u001B[0m, in \u001B[0;36mprocess_multiple_dates\u001B[0;34m(dates, gen_netcdf)\u001B[0m\n\u001B[1;32m     30\u001B[0m aggregation \u001B[38;5;241m=\u001B[39m dask\u001B[38;5;241m.\u001B[39mdelayed(aggregate)(\u001B[38;5;241m*\u001B[39mdelayed_processes)\n\u001B[1;32m     32\u001B[0m \u001B[38;5;66;03m## And launch them:\u001B[39;00m\n\u001B[0;32m---> 33\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43maggregation\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcompute\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m/opt/conda/lib/python3.11/site-packages/dask/base.py:342\u001B[0m, in \u001B[0;36mDaskMethodsMixin.compute\u001B[0;34m(self, **kwargs)\u001B[0m\n\u001B[1;32m    318\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mcompute\u001B[39m(\u001B[38;5;28mself\u001B[39m, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs):\n\u001B[1;32m    319\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"Compute this dask collection\u001B[39;00m\n\u001B[1;32m    320\u001B[0m \n\u001B[1;32m    321\u001B[0m \u001B[38;5;124;03m    This turns a lazy Dask collection into its in-memory equivalent.\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    340\u001B[0m \u001B[38;5;124;03m    dask.compute\u001B[39;00m\n\u001B[1;32m    341\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[0;32m--> 342\u001B[0m     (result,) \u001B[38;5;241m=\u001B[39m \u001B[43mcompute\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtraverse\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    343\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m result\n",
-      "File \u001B[0;32m/opt/conda/lib/python3.11/site-packages/dask/base.py:628\u001B[0m, in \u001B[0;36mcompute\u001B[0;34m(traverse, optimize_graph, scheduler, get, *args, **kwargs)\u001B[0m\n\u001B[1;32m    625\u001B[0m     postcomputes\u001B[38;5;241m.\u001B[39mappend(x\u001B[38;5;241m.\u001B[39m__dask_postcompute__())\n\u001B[1;32m    627\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m shorten_traceback():\n\u001B[0;32m--> 628\u001B[0m     results \u001B[38;5;241m=\u001B[39m \u001B[43mschedule\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdsk\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mkeys\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    630\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m repack([f(r, \u001B[38;5;241m*\u001B[39ma) \u001B[38;5;28;01mfor\u001B[39;00m r, (f, a) \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mzip\u001B[39m(results, postcomputes)])\n",
-      "Cell \u001B[0;32mIn[17], line 16\u001B[0m, in \u001B[0;36mprocess_multiple_dates.<locals>.delayed_process_date\u001B[0;34m(date)\u001B[0m\n\u001B[1;32m     14\u001B[0m \u001B[38;5;129m@dask\u001B[39m\u001B[38;5;241m.\u001B[39mdelayed\n\u001B[1;32m     15\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mdelayed_process_date\u001B[39m(date: \u001B[38;5;28mstr\u001B[39m):\n\u001B[0;32m---> 16\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mprocess_date\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdate\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgen_netcdf\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mgen_netcdf\u001B[49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[0;32mIn[16], line 49\u001B[0m, in \u001B[0;36mprocess_date\u001B[0;34m(date, gen_netcdf)\u001B[0m\n\u001B[1;32m     47\u001B[0m \u001B[38;5;66;03m## now, get the HMB result:\u001B[39;00m\n\u001B[1;32m     48\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m::: Started processing \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mdate\u001B[38;5;132;01m=}\u001B[39;00m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m---> 49\u001B[0m result \u001B[38;5;241m=\u001B[39m \u001B[43mprocess_helper\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mprocess_day\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdate\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     51\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m gen_netcdf:\n\u001B[1;32m     52\u001B[0m     nc_filename \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00moutput_dir\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m/\u001B[39m\u001B[38;5;132;01m{\u001B[39;00moutput_prefix\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;132;01m{\u001B[39;00mdate\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m.nc\u001B[39m\u001B[38;5;124m\"\u001B[39m\n",
-      "File \u001B[0;32m/opt/conda/lib/python3.11/site-packages/pbp/process_helper.py:236\u001B[0m, in \u001B[0;36mProcessHelper.process_day\u001B[0;34m(self, date)\u001B[0m\n\u001B[1;32m    233\u001B[0m     save_dataset_to_netcdf(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mlog, ds_result, nc_filename)\n\u001B[1;32m    234\u001B[0m     generated_filenames\u001B[38;5;241m.\u001B[39mappend(nc_filename)\n\u001B[0;32m--> 236\u001B[0m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfile_helper\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mday_completed\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    238\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m ProcessDayResult(generated_filenames, ds_result)\n",
-      "File \u001B[0;32m/opt/conda/lib/python3.11/site-packages/pbp/file_helper.py:311\u001B[0m, in \u001B[0;36mFileHelper.day_completed\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    307\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    308\u001B[0m \u001B[38;5;124;03mSince a process is launched only for day, we simply clear the cache.\u001B[39;00m\n\u001B[1;32m    309\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    310\u001B[0m \u001B[38;5;66;03m# first, close all sound files still open:\u001B[39;00m\n\u001B[0;32m--> 311\u001B[0m sound_files_open \u001B[38;5;241m=\u001B[39m \u001B[43m[\u001B[49m\n\u001B[1;32m    312\u001B[0m \u001B[43m    \u001B[49m\u001B[43mc_ss\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01mfor\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43mc_ss\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;129;43;01min\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msound_cache\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mvalues\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01mif\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43mc_ss\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msound_file\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;129;43;01mis\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[38;5;129;43;01mnot\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[38;5;28;43;01mNone\u001B[39;49;00m\n\u001B[1;32m    313\u001B[0m \u001B[43m\u001B[49m\u001B[43m]\u001B[49m\n\u001B[1;32m    314\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(sound_files_open) \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[1;32m    315\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mlog\u001B[38;5;241m.\u001B[39mdebug(\n\u001B[1;32m    316\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mday_completed: closing \u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mlen\u001B[39m(sound_files_open)\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m sound files still open\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    317\u001B[0m     )\n",
-      "File \u001B[0;32m/opt/conda/lib/python3.11/site-packages/pbp/file_helper.py:312\u001B[0m, in \u001B[0;36m<listcomp>\u001B[0;34m(.0)\u001B[0m\n\u001B[1;32m    307\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    308\u001B[0m \u001B[38;5;124;03mSince a process is launched only for day, we simply clear the cache.\u001B[39;00m\n\u001B[1;32m    309\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    310\u001B[0m \u001B[38;5;66;03m# first, close all sound files still open:\u001B[39;00m\n\u001B[1;32m    311\u001B[0m sound_files_open \u001B[38;5;241m=\u001B[39m [\n\u001B[0;32m--> 312\u001B[0m     c_ss \u001B[38;5;28;01mfor\u001B[39;00m c_ss \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39msound_cache\u001B[38;5;241m.\u001B[39mvalues() \u001B[38;5;28;01mif\u001B[39;00m \u001B[43mc_ss\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msound_file\u001B[49m \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[1;32m    313\u001B[0m ]\n\u001B[1;32m    314\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(sound_files_open) \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[1;32m    315\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mlog\u001B[38;5;241m.\u001B[39mdebug(\n\u001B[1;32m    316\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mday_completed: closing \u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mlen\u001B[39m(sound_files_open)\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m sound files still open\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    317\u001B[0m     )\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'SoundStatus' object has no attribute 'sound_file'"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ":::   Ended processing date='20200110' => (dataset generated in memory)\n",
-      ":::   Ended processing date='20200107' => (dataset generated in memory)\n"
+      ":::   Ended processing date='20200107' => (dataset generated in memory)\n",
+      ":::   Ended processing date='20200106' => (dataset generated in memory)\n",
+      ":::   Ended processing date='20200101' => (dataset generated in memory)\n",
+      ":::   Ended processing date='20200102' => (dataset generated in memory)\n",
+      "===> All 10 dates completed. Elapsed time: 136.1 seconds (2.3 mins)\n",
+      "Generated datasets: 10\n",
+      "\n",
+      "Saving generated datasets...\n",
+      "  - Saving nc_filename='NRS11/OUTPUT/NRS11_20200101.nc'\n",
+      "  - Saving nc_filename='NRS11/OUTPUT/NRS11_20200102.nc'\n",
+      "  - Saving nc_filename='NRS11/OUTPUT/NRS11_20200103.nc'\n",
+      "  - Saving nc_filename='NRS11/OUTPUT/NRS11_20200104.nc'\n",
+      "  - Saving nc_filename='NRS11/OUTPUT/NRS11_20200105.nc'\n",
+      "  - Saving nc_filename='NRS11/OUTPUT/NRS11_20200106.nc'\n",
+      "  - Saving nc_filename='NRS11/OUTPUT/NRS11_20200107.nc'\n",
+      "  - Saving nc_filename='NRS11/OUTPUT/NRS11_20200108.nc'\n",
+      "  - Saving nc_filename='NRS11/OUTPUT/NRS11_20200109.nc'\n",
+      "  - Saving nc_filename='NRS11/OUTPUT/NRS11_20200110.nc'\n"
      ]
     }
    ],
@@ -503,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "824e943e-253d-4e5a-b1ac-4a673998dc98",
    "metadata": {
     "id": "824e943e-253d-4e5a-b1ac-4a673998dc98"
@@ -513,17 +517,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 84\n",
-      "-rw-r--r-- 1 jovyan users 8585 Jul 18 21:14 NRS11_20200101.log\n",
-      "-rw-r--r-- 1 jovyan users 4699 Jul 18 21:14 NRS11_20200102.log\n",
-      "-rw-r--r-- 1 jovyan users 4699 Jul 18 21:14 NRS11_20200103.log\n",
-      "-rw-r--r-- 1 jovyan users 4699 Jul 18 21:14 NRS11_20200104.log\n",
-      "-rw-r--r-- 1 jovyan users 4699 Jul 18 21:14 NRS11_20200105.log\n",
-      "-rw-r--r-- 1 jovyan users 4699 Jul 18 21:14 NRS11_20200106.log\n",
-      "-rw-r--r-- 1 jovyan users 4699 Jul 18 21:14 NRS11_20200107.log\n",
-      "-rw-r--r-- 1 jovyan users 4699 Jul 18 21:14 NRS11_20200108.log\n",
-      "-rw-r--r-- 1 jovyan users 4699 Jul 18 21:14 NRS11_20200109.log\n",
-      "-rw-r--r-- 1 jovyan users 4699 Jul 18 21:14 NRS11_20200110.log\n"
+      "total 61800\n",
+      "-rw-r--r-- 1 jovyan users    4699 Jul 18 22:28 NRS11_20200101.log\n",
+      "-rw-r--r-- 1 jovyan users 6316672 Jul 18 22:28 NRS11_20200101.nc\n",
+      "-rw-r--r-- 1 jovyan users    4699 Jul 18 22:28 NRS11_20200102.log\n",
+      "-rw-r--r-- 1 jovyan users 6316672 Jul 18 22:28 NRS11_20200102.nc\n",
+      "-rw-r--r-- 1 jovyan users    4699 Jul 18 22:28 NRS11_20200103.log\n",
+      "-rw-r--r-- 1 jovyan users 6316672 Jul 18 22:28 NRS11_20200103.nc\n",
+      "-rw-r--r-- 1 jovyan users    4699 Jul 18 22:28 NRS11_20200104.log\n",
+      "-rw-r--r-- 1 jovyan users 6316672 Jul 18 22:28 NRS11_20200104.nc\n",
+      "-rw-r--r-- 1 jovyan users    4699 Jul 18 22:28 NRS11_20200105.log\n",
+      "-rw-r--r-- 1 jovyan users 6316672 Jul 18 22:28 NRS11_20200105.nc\n",
+      "-rw-r--r-- 1 jovyan users    4699 Jul 18 22:28 NRS11_20200106.log\n",
+      "-rw-r--r-- 1 jovyan users 6316672 Jul 18 22:28 NRS11_20200106.nc\n",
+      "-rw-r--r-- 1 jovyan users    4699 Jul 18 22:28 NRS11_20200107.log\n",
+      "-rw-r--r-- 1 jovyan users 6316672 Jul 18 22:28 NRS11_20200107.nc\n",
+      "-rw-r--r-- 1 jovyan users    4699 Jul 18 22:28 NRS11_20200108.log\n",
+      "-rw-r--r-- 1 jovyan users 6316672 Jul 18 22:28 NRS11_20200108.nc\n",
+      "-rw-r--r-- 1 jovyan users    4699 Jul 18 22:28 NRS11_20200109.log\n",
+      "-rw-r--r-- 1 jovyan users 6316672 Jul 18 22:28 NRS11_20200109.nc\n",
+      "-rw-r--r-- 1 jovyan users    4699 Jul 18 22:28 NRS11_20200110.log\n",
+      "-rw-r--r-- 1 jovyan users 6316672 Jul 18 22:28 NRS11_20200110.nc\n"
      ]
     }
    ],
